--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_html: ^3.0.0
   sqflite: ^2.4.2
   path: ^1.9.1
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
